--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -47,6 +47,7 @@ jobs:
           VERSION=latest
           if [[ $GITHUB_REF == refs/tags/* ]]; then
             VERSION=${GITHUB_REF#refs/tags/}
+            VERSION=$(echo ${VERSION} | sed s/^v//)
           elif [[ $GITHUB_REF == refs/heads/master ]]; then
             VERSION=latest
           fi
